--- a/css/BurgerMenu.css
+++ b/css/BurgerMenu.css
@@ -15,17 +15,23 @@
 
 #menuToggle a
 {
+    color: inherit;
     text-decoration: none;
-    color: #232323;
-
+    padding: 15px 0;
+    color: white;
+    font-family: 'Archivo Black', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 50px;
+    line-height: 70px;
     transition: color 0.3s ease;
 }
 
-#menuToggle a:hover
-{
-    color: tomato;
+#menuToggle a:hover {
+    color: #D3010E;
+    color: inherit;
+    text-decoration: none;
 }
-
 
 #menuToggle input
 {
@@ -131,6 +137,10 @@
     font-weight: 400;
     font-size: 50px;
     line-height: 70px;
+}
+
+a{
+
 }
 
 #menu li:hover{
